argocd/overlays/staging/frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 3
  strategy:
    canary:
      analysis:
        templates:
          - templateName: cloudops-store-canary-staging
      steps:
        - setWeight: 20
        - pause: { duration: 45 }
        - setWeight: 50
        - pause: { duration: 45 }
        - setWeight: 100
