argocd/overlays/staging/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  annotations:
    argocd-image-updater.argoproj.io/image-list: worker=499503541876.dkr.ecr.us-east-1.amazonaws.com/cloudops-staging-worker
    argocd-image-updater.argoproj.io/worker.update-strategy: latest
